# sys-perf-opt

./: README.md  ar-SA.ts  build.gradle.kts  en-US.ts  fr-FR.ts  ja-JP.ts  settings.gradle.kts  vi-VN.ts  zh-CN.ts  zh-HK.ts  zh-TW.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
loader/: build.gradle.kts
loader/src/: CMakeLists.txt
loader/src/common/: daemon.cpp
loader/src/include/: daemon.h  logging.h
loader/src/injector/: entry.cpp
loader/src/ptracer/: main.cpp  monitor.cpp  ptracer.cpp  utils.hpp
module/: build.gradle.kts
module/src/: customize.sh  module.prop  post-fs-data.sh  service.sh
zygiskd/: Cargo.toml  build.gradle.kts
zygiskd/src/: companion.rs  constants.rs  main.rs  perfoptd.rs
